k8s/separate/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gpstracker
  labels:
    name: gpstracker
    app: gps-tracker-mqtt
