k8s/separate/05-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: gpstracker
  labels:
    app: mongo
    component: database
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    name: mongo
  selector:
    app: mongo
